<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LocationSocketServerDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_service">start service</string>
    <string name="stop_service">stop service</string>
    <string name="start_client">start client</string>
    <string name="stop_client">stop client</string>
    <string name="start_server_socket">start server socket</string>
    <string name="stop_server_socket">stop server socket</string>
    <string name="start_client_socket">start client socket</string>
    <string name="stop_client_socket">stop client socket</string>
</resources>