<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:padding="4dip" >

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="100dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/start_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_service" >
            </Button>

            <Button
                android:id="@+id/stop_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_service" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/start_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_client" >
            </Button>

            <Button
                android:id="@+id/stop_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_client" >
            </Button>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/linearlayout" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/start_server_socket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_server_socket" >
            </Button>

            <Button
                android:id="@+id/stop_server_socket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_server_socket" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/start_client_socket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_client_socket" >
            </Button>

            <Button
                android:id="@+id/stop_client_socket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_client_socket" >
            </Button>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout2" >

        <TextView
            android:id="@+id/textlog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />
    </ScrollView>

</RelativeLayout>